/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.github.igalshilman.statefun.verifier;
option java_package = "com.github.igalshilman.statefun.verifier.generated";
option java_multiple_files = true;

message SourceCommand {
  FnAddress target = 1;
  Commands commands = 2;
}

message Commands {
  repeated Command command = 1;
}

message Command {
  message ModifyState {
    int64 delta = 1;
  }
  message Send {
    FnAddress target = 1;
    Commands commands = 2;
  }
  message SendAfter {
    int32 duration_ms = 1;
    FnAddress target = 2;
    Commands commands = 3;
  }
  message SendEgress {
  }
  message AsyncOperation {
    int32 resolve_after_ms = 1;
    bool failure = 2;
    Commands resolved_commands = 3;
  }
  message Verify {
    int64 expected = 1;
  }
  message UseCPU {
    int64 fib = 1;
  }
  message UseIO {
    int32 sleep_ms = 1;
  }

  oneof command {
    ModifyState modify = 1;
    Send send = 2;
    SendAfter send_after = 3;
    SendEgress send_egress = 4;
    AsyncOperation async_operation = 6;
    UseCPU use_cpu = 7;
    UseIO use_io = 8;
    Verify verify = 9;
  }
}

message FnAddress {
  int32 type = 1;
  int32 id = 2;
}

